# repoff

./: .gitignore  AGENTS.md  CONTRIBUTING.md  NICHE.md  README.md  install-extension.sh  model_test.py  package-lock.json  package.json
backend/: README.md  environment.yml  pyproject.toml  requirements.txt
backend/src/harness/: __init__.py  config.py  models.py  service.py  session_logging.py
backend/src/harness/adapters/: vscode_lm.py
backend/src/harness/llms/: specs.py  vscode_chat_model.py
backend/src/harness/memory/: __init__.py  models.py  policy.py  render.py  store.py
backend/src/harness/orchestration/: deep_agent.py  harness_config.py
backend/src/harness/sessions/: __init__.py  contracts.py  factory.py  fidelity_store.py  manager.py  runtime_store.py
backend/src/harness/storage/: __init__.py  session_store.py  trajectory_store.py
backend/src/mailbox_service/: __init__.py  cli.py  delegate.py  models.py  worker.py
backend/src/mailbox_service/tools/: __init__.py  swe.py
backend/src/mailbox_service/transports/: __init__.py  filesystem.py
backend/src/quasipilot/: __init__.py  cli.py
backend/src/quasipilot/human_cli/: __init__.py  runner.py  textual_chat.py
backend/src/quasipilot/slash_commands/: __init__.py  base.py  exit.py  registry.py  sessions.py
backend/src/quasipilot/ui/: chat_tui.py
backend/src/relay/: __init__.py  codec.py  models.py  service.py  worker.py
backend/src/relay_service/: agent_store.py  cli.py  service.py  thread_store.py  tmux.py
backend/src/repoff/: chat.py  cli.py  config.py  mailbox_spawn.py  models.py  relay_worker.py  runtime_context.py  session_logging.py
backend/src/repoff/adapters/: __init__.py  vscode_lm.py
backend/src/repoff/human_cli/: runner.py  (+1 more)
(+81 files in other folders)
