[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repoff"
version = "0.1.0"
description = "CLI agent backend for models hosted via the VS Code LM adapter."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mycopilot = "repoff.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
