[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repoff"
version = "0.1.0"
description = "CLI agent backend for models hosted via the VS Code LM adapter."
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.4.12",
    "langchain>=1.2.15",
]

[project.scripts]
quasipilot = "repoff.cli:main"
mailbox = "mailbox_service.cli:main"
send = "mailbox_service.delegate:main"
mailbox-gateway = "mailbox_service.gateway:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
